# Currency-Converter

./: CMakeLists.txt  Downloader.cpp  Downloader.h  ItemEditDialog.cpp  Item_Edit_Frame.h  Item_Edit_Main_Frame.h  README.md  application.cpp  application.h  currency_types.h  itemeditdialog.cpp  itemeditdialog.h  itemeditframe.cpp  itemeditframe.h  itemeditmainframe.cpp  itemeditmainframe.h  items.h  main.cpp  mainwindow.cpp  mainwindow.h
